--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -215,6 +215,13 @@ main {
 footer {
   padding: 16px;
 }
+
+footer #footerTools {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 8px;
+}
  
 footer p {
   text-align: center;
@@ -224,4 +231,34 @@ footer p {
 footer p a {
   color: #db0000;
   text-decoration: none;
+}
+
+/*
+  Button
+*/
+
+.btn {
+  display: inline-block;
+  padding: 12px 24px;
+  background-color: #DB0000;
+  border: 1px solid #770000;
+  border-radius: 4px;
+
+  font-weight: 500;
+  font-size: 16px;
+
+  cursor: pointer;
+  transition: .15s ease-in-out;
+}
+
+.btn:hove {
+  background-color: #DB0000BB;
+}
+
+.btn:active {
+  background-color: #DB0000DD;
+}
+
+.btn:focus-visible {
+  outline: 3px solid #DB000055;
 }
