--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -32,6 +32,10 @@
 </header>
 <main id="mainContent"></main>
 <footer>
+  <div id="footerTools">
+    <button id="SubscribePushNotification" class="btn">SubscribePushNotification</button>
+    <button id="UnsubscribePushNotification" class="btn">UnsubscribePushNotification</button>
+  </div>
   <p>All data obtained from <a href="https://themoviedb.org" target="_blank" rel="noreferrer">TheMovieDB</a></p>
 </footer>
 </body>
