--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Free movie catalogue for you">
   <meta name="theme-color" content="#DB0000"/>
-
+  
   <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
-  <link rel="icon" href="./favicon.jpeg">
+  <link rel="icon" href="./favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="manifest" href="./app.webmanifest">
   <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
-
+  
   <title>Movie Catalogue</title>
 </head>
 <body>
@@ -32,10 +32,6 @@
 </header>
 <main id="mainContent"></main>
 <footer>
-  <div id="footerTools">
-    <button id="subscribePushNotification" class="btn">SubscribePushNotification</button>
-    <button id="unsubscribePushNotification" class="btn">UnsubscribePushNotification</button>
-  </div>
   <p>All data obtained from <a href="https://themoviedb.org" target="_blank" rel="noreferrer">TheMovieDB</a></p>
 </footer>
 </body>
