--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -191,6 +191,12 @@ footer {
   padding: 16px;
 }
 
+footer #footerTools {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 8px;
+}
 footer p {
   text-align: center;
   color: #aaaaaa;
@@ -220,4 +226,35 @@ footer p a {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+/*
+ Button
+*/
+
+.btn {
+  display: inline-block;
+  padding: 12px 24px;
+  background-color: #DB0000;
+  border: 1px solid #770000;
+  border-radius: 4px;
+  
+  font-weight: 500;
+  font-size: 16px;
+  color: #ffffff;
+
+  cursor: pointer;
+  transition: .15s ease-in-out;
+}
+
+.btn:hover {
+  background-color: #DB0000BB;
+}
+
+.btn:active {
+  background-color: #DB0000DD;
+}
+
+.btn:focus-visible {
+  outline: 3px solid #DB000055;
 }
