ready to next lesson

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,7 +12,7 @@
   <link rel="manifest" href="./app.webmanifest">
   <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
   
-  <title>Movie Catalogue</title>
+  <title>Movie Cataloguee</title>
 </head>
 <body>
 <header class="app-bar">
